Bugfix: Transform tool crash when scaled to a few pixels

BUG:421363